# django-coffee-guide

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
cafes/: admin.py  forms.py  urls.py  views.py
cafes/migrations/: 0001_initial.py  0002_cafe_description_cafe_main_image.py  0003_alter_cafe_is_open_now_review_favorite.py
cafes/models/: __init__.py  cafe.py  favorite.py  review.py
config/: settings.py  urls.py
static/css/: main.css
templates/: 404.html  base.html
templates/cafes/: about.html  cafe_detail.html  cafe_list.html  home.html  profile.html
templates/cafes/partials/: cafe_card.html
templates/registration/: login.html  signup.html
