[project]
name = "coffee-guide"
version = "0.1.0"
description = "Coffee guide website in Django"
authors = [
    {name = "Alexander Lyukshin",email = "alexluni22@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "django (==5.1.3)",
    "psycopg[binary] (>=3.2.12,<4.0.0)",
    "python-dotenv (==1.0.1)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ruff = "0.6.9"
black = "24.10.0"
mypy = "1.11.2"
django-stubs = "5.1.0"

